CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.6.3-dev

dashboard
======================
* Initial checkin of new CruiseControl dashboard.

documentation
======================
* Update the look and feel of the documentation to be less intrusive and more contemporary in design. Added in newly trademarked CruiseControl logo.


build loop
======================

JMX
----------------------
* Added the ability to retrieve commit messages for a project's "current" modification set.
* Added the ability to retrieve build output (e.g. from Ant) from the most recent, or active, build.
* Added the ability to retrieve statuses of all projects.  

contrib
======================

mainAsWar
----------------------
* Stop the non-daemon threads (BuildQueue and JMX Adapters) when the servlet is destroyed to allow a clean exit by the servlet container.


CruiseControl Release Notes - 2.6.2

documentation
======================

configxml.html
----------------------
* Added "veto" sourcecontrol to modificationset overview documentation (main/docs/configxml.html#modificationset). Patch by Allan Wick.
* Added "composite" builder to schedule overview documentation (main/docs/configxml.html#schedule). Pointed out by Kevin Quigley.
* Clarified documentation and fixed a typo for MKSBootstrapper (CC-584). Patch by Markus M. May.

build loop
======================

ConcurrentVersionsSystem
----------------------
* Added new attribute named "reallyQuiet" which will result in a "-Q" getting passed to cvs for the log command, instead of the default "-q". (CC-607) Suggested by Chris Nappin and Gisbert Amm.

CruiseControlConfig
----------------------
* Added the ability to use "global" properties in include.projects elements, e.g. <property environment="env" toupper="true" /> <include.projects file="config_${env.HOSTNAME}.xml" />. Patch by Andreas Mettlen.

CompositeBuilder
----------------------